Intro to C++ (code of monday's lecture)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,6 @@ include(common/Eigen.cmake)
 include(common/OpenCV.cmake)
 
 #--- Subprojects
+add_subdirectory(introcpp)
 add_subdirectory(raytrace)
+
