--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,5 @@ include(common/OpenGP.cmake)
 add_subdirectory(introcpp)
 add_subdirectory(raytrace)
 add_subdirectory(trimeshio)
+add_subdirectory(rasterizeline)
+add_subdirectory(rasterizetriangle)
