--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,6 @@ include(common/OpenGP.cmake)
 
 #--- Subprojects
 add_subdirectory(introcpp)
+add_subdirectory(inheritance)
 add_subdirectory(raytrace)
 add_subdirectory(trimeshio)
