Adding lab 4 code
post project “planets” (for transform hierarchy) and project “point
pick” (for mouse interaction) for lab 4.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,5 @@ include(common/GLFW.cmake)
 #add_subdirectory(rasterizetriangle)
 add_subdirectory(helloglsl)
 add_subdirectory(introglsl)
+add_subdirectory(planets)
+add_subdirectory(pointpick)
