--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,8 @@ include(common/GLFW.cmake)
 #add_subdirectory(trimeshio)
 #add_subdirectory(rasterizeline)
 #add_subdirectory(rasterizetriangle)
-add_subdirectory(helloglsl)
-add_subdirectory(introglsl)
-add_subdirectory(planets)
-add_subdirectory(pointpick)
+#add_subdirectory(helloglsl)
+#add_subdirectory(introglsl)
+#add_subdirectory(planets)
+#add_subdirectory(pointpick)
+add_subdirectory(framebuffer2d)
