Lab 6 code framework : perlin noise

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,5 @@ include(common/GLFW.cmake)
 #add_subdirectory(introglsl)
 #add_subdirectory(planets)
 #add_subdirectory(pointpick)
-add_subdirectory(framebuffer2d)
+#add_subdirectory(framebuffer2d)
+add_subdirectory(perlin)
