[new] lecture_viewing3d_fov

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ src/raytrace/output.png
 /introglsl/introglsl
 
 /lecture_viewing3d/lecture_viewing3d
+
+/lecture_viewing3d_fov/lecture_viewing3d_fov
