--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,5 +24,6 @@ include(common/GLFW.cmake)
 #add_subdirectory(planets)
 #add_subdirectory(pointpick)
 #add_subdirectory(framebuffer2d)
-add_subdirectory(lecture_viewing3d)
-add_subdirectory(perlin)
+#add_subdirectory(lecture_viewing3d)
+#add_subdirectory(perlin)
+add_subdirectory(lecture_viewing3d_fov)
