[tweaks] lecture_viewing3d_fov

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,4 +26,5 @@ include(common/GLFW.cmake)
 #add_subdirectory(framebuffer2d)
 #add_subdirectory(lecture_viewing3d)
 #add_subdirectory(perlin)
-add_subdirectory(lecture_viewing3d_fov)
+#add_subdirectory(lecture_viewing3d_fov)
+add_subdirectory(lecture_viewing3d_fov_eigen)
