[new] lecture_viewing3d_fov_eigen

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ src/raytrace/output.png
 /lecture_viewing3d/lecture_viewing3d
 
 /lecture_viewing3d_fov/lecture_viewing3d_fov
+
+/lecture_viewing3d_fov_eigen/lecture_viewing3d_fov
+/lecture_viewing3d_fov_eigen/lecture_viewing3d_fov_eigen
