[new] eigen_image

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,5 @@ src/raytrace/output.png
 
 /lecture_viewing3d_fov_eigen/lecture_viewing3d_fov
 /lecture_viewing3d_fov_eigen/lecture_viewing3d_fov_eigen
+
+/eigen_image/eigen_image
