--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,4 +27,5 @@ include(common/GLFW.cmake)
 #add_subdirectory(lecture_viewing3d)
 #add_subdirectory(perlin)
 #add_subdirectory(lecture_viewing3d_fov)
-add_subdirectory(lecture_viewing3d_fov_eigen)
+#add_subdirectory(lecture_viewing3d_fov_eigen)
+add_subdirectory(eigen_image)
