--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,4 @@ include(common/GLFW.cmake)
 #add_subdirectory(lecture_viewing3d_fov)
 #add_subdirectory(lecture_viewing3d_fov_eigen)
 add_subdirectory(eigen_image)
+add_subdirectory(lecture_viewing3d_fov_eigen_grid)
