lab 7 reflection and clipping

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,5 +28,6 @@ include(common/GLFW.cmake)
 #add_subdirectory(perlin)
 #add_subdirectory(lecture_viewing3d_fov)
 #add_subdirectory(lecture_viewing3d_fov_eigen)
-add_subdirectory(eigen_image)
-add_subdirectory(lecture_viewing3d_fov_eigen_grid)
+#add_subdirectory(eigen_image)
+#add_subdirectory(lecture_viewing3d_fov_eigen_grid)
+add_subdirectory(mirror)
